fix: scroll by duplicating elements instead z-index layers

--- a/style.css
+++ b/style.css
@@ -189,24 +189,53 @@ p {
   left: 0;
   top: 0;
   height: 100%;
-  width: max-content;
   max-width: 100%;
   background: black;
   transform: translateX(-100%);
   transition: transform 0.5s ease;
-  width: 100%;
+  width: 100vw;
   z-index: 50;
-  padding-top: 191px;
   overflow-y: auto;
 }
 
-.drawer a {
+.drawer ul a {
   display: block;
   padding: 16px;
   visibility: hidden;
   transition: visibility 0.5s linear;
   border-bottom: 1px solid rgba(255, 255, 255, 0.15);
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1024px) {
+  .drawer-top-items {
+    display: none;
+  }
+}
+
+.drawer-contact {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  width: calc(100% - 32px);
+}
+
+.drawer-contact div a {
+  gap: 8px;
+  display: inline-flex;
+  align-items: center;
+}
+
+.drawer-contact div i {
+  font-size: 20px;
+}
+
+.drawer-contact div:first-child {
+  flex: 1;
+}
+
+.drawer-logo {
+  padding: 16px;
 }
 
 nav ul {
@@ -229,10 +258,9 @@ nav a {
   width: 32px;
   flex-direction: column;
   cursor: pointer;
-}
-
-.hamburger, .topbar-area-contact-info__socials, .topbar-area-contact-info__details, .topbar-area-logo {
   z-index: 60;
+  right: 16px;
+  position: fixed; // only when mobile menu is open
 }
 
 @media screen and (min-width: 1280px) {
